Update workflows and configuration

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,8 +20,8 @@ jobs:
 
       - name: Generate plan
         run: |
-          thin provider install ci ghcr.io/sourceplane/lite-ci:v0.2.4
-          thin ci plan --view dag
+          thin provider install ci ghcr.io/sourceplane/lite-ci:v0.2.5
+          thin ci plan --changed --view dag
 
       - name: Convert plan → matrix
         id: matrix
